--- a/grace/templates/grace/footer1.html
+++ b/grace/templates/grace/footer1.html
@@ -5,8 +5,10 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
+                    
                     <h1 class="fw-bold text-primary mb-4">Grace<span class="text-white">Mission</span></h1>
-                    <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
+                    <img src="{% static 'asset/img/glogo.png' %}" alt="">
+                    <p>GRACE MISSION DAHWENYA.</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -18,7 +20,7 @@
                     <h5 class="text-light mb-4">Address</h5>
                     <p><i class="fa fa-map-marker me-3"></i>PS Global Gate1, Plot 399, 42nd Street Comm. 25</p>
                     <p><i class="fa fa-phone me-3"></i>+233 244 225 225</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p><i class="fa fa-envelope me-3"></i>gracemission.baptist@gmail.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
