--- a/grace/templates/grace/index.html
+++ b/grace/templates/grace/index.html
@@ -11,9 +11,9 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 pt-5">
-                                    <h1 class="display-4 text-white mb-3 animated slideInDown">Morning Prayer</h1>
+                                    <h1 class="display-4 text-white mb-3 animated slideInDown">CALVARY BAPTIST GRACE MISSION DAHWENYA.</h1>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Liturgical prayer has many virtues: it prevents individuals from becoming cranky and self-centered, by keeping them in touch with the corporate prayer of the Church</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="/about">
                                         Learn More
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -32,7 +32,7 @@
                                 <div class="col-lg-7 pt-5">
                                     <h1 class="display-4 text-white mb-3 animated slideInDown">Transforming live restoring hope</h1>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Our common creed is our belief in the Bible, our deep faith in Jesus Christ, and our acceptance of the unconditional love of God.</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="/about">
                                         Learn More
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -63,26 +63,34 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="{% static 'asset/img/church-7.jpg' %}" alt="" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="{% static 'asset/img/church-9.jpg' %}" alt="" style="object-fit: cover;">
                         <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="{% static 'asset/img/church-8.jpg' %}" alt="" style="width: 200px; height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">About Us</div>
-                        <h1 class="display-6 mb-5">A church that loves God and people</h1>
+                        <h1 class="display-6 mb-5">Grace Mission Dahwenya</h1>
                         <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
-                            <p class="text-dark mb-2">We have a strong sense of community with parishioners. People and children of all ages here are encouraged to learn about their own faith and the role of the church in our community and worldwide.</p>
-                            <span class="text-primary">Jhon Doe, Founder</span>
+                            <p class="text-dark mb-2">
+                                Calvary Baptist Church-Awoshie has carried the mission to worship GOD 
+                                whenever and wherever. Submitting completely to the Holy Spirit, Giving 
+                                our best for GOD’S work and Sharing our Faith through Effective Christian 
+                                Living.</p>
+                            <span class="text-primary">In-HIS Service, Pastor Rex</span>
                         </div>
-                        <p class="mb-5"> Arizona Baptist missionary W.A. Vanderhoof began services in the car that continued in that location until the end of the year. The Coconino Sun reported that: “In spite of a bad location, the audiences have been growing at the chapel car.</p>
-                        <a class="btn btn-primary py-2 px-3 me-3" href="">
+                        <p class="mb-5"> This mission has led to a vibrant congregation that is positively impacting its 
+                            community the past 20 years. And in 2016 there was a divine direction to replicate 
+                            this impact beyond our immediate environs, resulting in the vision in 2017 to 
+                            plant at least 3 Mission Churches by 2021 to celebrate the 25th Anniversary of
+                            Calvary Baptist Church-Awoshie.</p>
+                        <a class="btn btn-primary py-2 px-3 me-3" href="/about">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
                             </div>
                         </a>
-                        <a class="btn btn-outline-primary py-2 px-3" href="">
+                        <a class="btn btn-outline-primary py-2 px-3" href="/contact">
                             Contact Us
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -101,23 +109,23 @@
         <div class="container py-5">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">Recent Events</div>
-                <h1 class="display-6 mb-5">The Miracle Working God.</h1>
+                <h1 class="display-6 mb-5">Recent Events.</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>Miracle Service vol.1</small>
+                                <small>African Wear Day</small>
                             </div>
-                            <h5 class="mb-3">Miracle Service vol.1</h5>
+                            <h5 class="mb-3">12/05/22</h5>
                             <p>Tempor erat elitr rebum at clita dolor diam ipsum sit diam amet diam et eos</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="{% static 'asset/img/church-2.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'asset/img/african-wear.jpg' %}" alt="">
                             <div class="causes-overlay">
-                                <a class="btn btn-outline-primary" href="">
-                                    Read More
+                                <a class="btn btn-outline-primary" href="/event">
+                                    See More
                                     <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                         <i class="fa fa-arrow-right"></i>
                                     </div>
@@ -130,16 +138,16 @@
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>Miracle Service vol.2</small>
+                                <small>community Float</small>
                             </div>
-                            <h5 class="mb-3">Miracle Service vol.2</h5>
+                            <h5 class="mb-3">02/05/22</h5>
                             <p>Tempor erat elitr rebum at clita dolor diam ipsum sit diam amet diam et eos</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="{% static 'asset/img/church-7.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'asset/img/community_float.jpg' %}" alt="">
                             <div class="causes-overlay">
-                                <a class="btn btn-outline-primary" href="">
-                                    Read More
+                                <a class="btn btn-outline-primary" href="/event">
+                                    See More
                                     <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                         <i class="fa fa-arrow-right"></i>
                                     </div>
@@ -152,16 +160,16 @@
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>Miracle Service vol.3</small>
+                                <small>Sunday Christmas Children Service</small>
                             </div>
-                            <h5 class="mb-3">Miracle Service vol.3</h5>
+                            <h5 class="mb-3">19/05/22</h5>
                             <p>Tempor erat elitr rebum at clita dolor diam ipsum sit diam amet diam et eos</p>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="{% static 'asset/img/church-8.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static 'asset/img/chrimas.jpg' %}" alt="">
                             <div class="causes-overlay">
-                                <a class="btn btn-outline-primary" href="">
-                                    Read More
+                                <a class="btn btn-outline-primary" href="/event">
+                                    See More
                                     <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                         <i class="fa fa-arrow-right"></i>
                                     </div>
@@ -190,7 +198,7 @@
                         <h4 class="mb-3">Praise & Worship
                         </h4>
                         <p class="mb-4">Our church is open and friendly with many social activities. To keep our church running smoothly, we have committees.</p>
-                        <a class="btn btn-outline-primary px-3" href="">
+                        <a class="btn btn-outline-primary px-3" href="/about">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -203,7 +211,7 @@
                         <img class="img-fluid mb-4" src="https://cdn-icons-png.flaticon.com/512/384/384447.png" alt="">
                         <h4 class="mb-3">Counseling</h4>
                         <p class="mb-4">We exist to represent Christ to our community and world so that they might see Jesus and realize all that God has planned for them!</p>
-                        <a class="btn btn-outline-primary px-3" href="">
+                        <a class="btn btn-outline-primary px-3" href="/about">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -216,7 +224,7 @@
                         <img class="img-fluid mb-4" src="https://cdn-icons-png.flaticon.com/512/298/298059.png" alt="">
                         <h4 class="mb-3">Exhortation</h4>
                         <p class="mb-4">We invite you to see for yourself how exciting church can be when the focus is simple and people are free to go after God with passion.</p>
-                        <a class="btn btn-outline-primary px-3" href="">
+                        <a class="btn btn-outline-primary px-3" href="/about">
                             Learn More
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -243,38 +251,15 @@
                     <div class="h-100 bg-white p-5">
                         <form>
                             <div class="row g-3">
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control bg-light border-0" id="name" placeholder="Your Name">
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control bg-light border-0" id="email" placeholder="Your Email">
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="btn-group d-flex justify-content-around">
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-                                        <label class="btn btn-light py-3" for="btnradio1">$10</label>
-
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
-                                        <label class="btn btn-light py-3" for="btnradio2">$20</label>
-
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
-                                        <label class="btn btn-light py-3" for="btnradio3">$30</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary px-5" style="height: 60px;">
-                                        Donate Now
-                                        <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
-                                            <i class="fa fa-arrow-right"></i>
-                                        </div>
-                                    </button>
-                                </div>
+                                {% load bootstrap5 %}
+                        {% include 'grace/messages.html' %}
+                    <form action="" method="post" class="form">
+                        {% csrf_token %}
+                        {% bootstrap_form form%}
+                        {% buttons %}
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        {% endbuttons %}
+                    </form>
                             </div>
                         </form>
                     </div>
@@ -361,7 +346,7 @@
         </div>
     </div>
     <!-- Team End -->
-
+{% comment %} 
 
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
@@ -397,7 +382,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> {% endcomment %}
     <!-- Testimonial End -->
     {% include 'grace/footer1.html' %}
     {% endblock content %}
