--- a/static/asset/css/style.css
+++ b/static/asset/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 
 :root {
-    --primary: #00C0F0;
+    --primary: #2870FF;
     --secondary: #FFF0E6;
     --light: #F8F8F9;
     --dark: #001D23;
