--- a/grace/templates/grace/donate.html
+++ b/grace/templates/grace/donate.html
@@ -15,53 +15,33 @@
         </div>
     </div>
     <!-- Page Header End -->
-
-
     <!-- Donate Start -->
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Donate Now</div>
-                    <h1 class="display-6 mb-5">Thanks For The Results Achieved With You</h1>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="display-6 mb-5">Additional Details</h1>
+                    <p class="mb-0">To support, you should make a transfer to one of the Grace Mission's bank accounts:</p>
+                    <p class="mb-0">Nordbank IBAN EE797178500010380024</p>
+                    <p class="mb-0">Danski IBAN EE403300408003345300</p>
+                    <p class="mb-0">SEAB IBAN EE202610201001491011</p>
+                    <p class="mb-0">Nordbank IBAN EE797178500010380024</p>
+                    <p class="mb-0">Nordbank IBAN EE797178500010380024</p>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="h-100 bg-secondary p-5">
                         <form>
                             <div class="row g-3">
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control bg-light border-0" id="name" placeholder="Your Name">
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control bg-light border-0" id="email" placeholder="Your Email">
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="btn-group d-flex justify-content-around">
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-                                        <label class="btn btn-light py-3" for="btnradio1">$10</label>
-
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
-                                        <label class="btn btn-light py-3" for="btnradio2">$20</label>
-
-                                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
-                                        <label class="btn btn-light py-3" for="btnradio3">$30</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary px-5" style="height: 60px;">
-                                        Donate Now
-                                        <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
-                                            <i class="fa fa-arrow-right"></i>
-                                        </div>
-                                    </button>
-                                </div>
+                                {% load bootstrap5 %}
+                        {% include 'grace/messages.html' %}
+                    <form action="" method="post" class="form">
+                        {% csrf_token %}
+                        {% bootstrap_form form%}
+                        {% buttons %}
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        {% endbuttons %}
+                    </form>
                             </div>
                         </form>
                     </div>
@@ -70,7 +50,7 @@
         </div>
     </div>
     <!-- Donate End -->
-    {% include 'grace/footer.html' %}
+    {% include 'grace/footer1.html' %}
     <!-- JS here -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
