--- a/grace/templates/grace/gallery.html
+++ b/grace/templates/grace/gallery.html
@@ -9,7 +9,6 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Gallery</li>
                 </ol>
             </nav>
@@ -22,223 +21,49 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">Gallery</div>
-                <h1 class="display-6 mb-5">Events Gallery</h1>
-            </div>
-            <div class="gallery_area">
-                <div class="container">
-                    <div class="row grid">
-                        <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
-                            <div class="single-gallery mb-30">
-                                <div class="portfolio-img">
-                                        <img src="{% static 'assets/img/gallery/5.png' %}" alt="">
-                                </div>
-                                <div class="gallery_hover">
-                                        <a class="popup-image" href="{% static 'assets/img/gallery/5.png' %}" class="hover_inner">
-                                            <i class="ti-plus"></i>
-                                            <h3>New York Show-2018</h3>
-                                        </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
-                            <div class="single-gallery mb-30">
-                                <div class="portfolio-img">
-                                        <img src="{% static 'assets/img/gallery/5.png' %}" alt="">
-                                </div>
-                                <div class="gallery_hover">
-                                        <a class="popup-image" href="{% static 'assets/img/gallery/5.png' %}" class="hover_inner">
-                                            <i class="ti-plus"></i>
-                                            <h3>New York Show-2018</h3>
-                                        </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
-                            <div class="single-gallery mb-30">
-                                <div class="portfolio-img">
-                                        <img src="{% static 'assets/img/gallery/5.png' %}" alt="">
-                                </div>
-                                <div class="gallery_hover">
-                                        <a class="popup-image" href="{% static 'assets/img/gallery/5.png' %}" class="hover_inner">
-                                            <i class="ti-plus"></i>
-                                            <h3>New York Show-2018</h3>
-                                        </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h1 class="display-6 mb-5">Image Gallery</h1>
             </div>
             <!--/ gallery -->
             <div class="section-top-border">
-				<div class="row">
-                    <div class="col-xl-12">
-                        <div class="section_title text-center mb-65">
-                            <h3>Image Gallery</h3>
-                        </div>
-                    </div>
-                </div>
 				<div class="row gallery-item">
+                    {% for gallery in gallery_list %}
 					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g1.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g1.jpg' %});"></div>
+						<a href="{{ gallery.image.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image.url }});"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g2.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g2.jpg' %});"></div>
+						<a href="{{ gallery.image2.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image2.url }});"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g3.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g3.jpg' %});"></div>
+						<a href="{{ gallery.image3.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image3.url }});"></div>
 						</a>
 					</div>
 					<div class="col-md-6">
-						<a href="{% static 'assets/img/elements/g4.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g4.jpg' %});"></div>
+						<a href="{{ gallery.image4.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image4.url }});"></div>
 						</a>
 					</div>
 					<div class="col-md-6">
-						<a href="{% static 'assets/img/elements/g5.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g5.jpg' %});"></div>
+						<a href="{{ gallery.image5.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image5.url }});"></div>
 						</a>
 					</div>
 					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g6.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g6.jpg' %});"></div>
+						<a href="{{ gallery.image6.url }}" class="img-pop-up">
+							<div class="single-gallery-image" style="background: url({{ gallery.image6.url }});"></div>
 						</a>
 					</div>
-					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g7.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g7.jpg' %});"></div>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="{% static 'assets/img/elements/g8.jpg' %}" class="img-pop-up">
-							<div class="single-gallery-image" style="background: url({% static 'assets/img/elements/g8.jpg' %});"></div>
-						</a>
-					</div>
+                    {% endfor %}
 				</div>
 			</div>
 			
             <!-- / youtube_video_area  -->
         </div>
     </div>
-    
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">Sermons</div>
-                <h1 class="display-6 mb-5">Listen to our message</h1>
-            </div>
-            <!-- music_area  -->
-            <div class="music_area music_gallery fadeInUp" data-wow-delay="0.1s">
-                <div class="container">
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/1.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/2.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                                
-                        </div>
-
-                    </div>
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/3.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-    <!-- music_area end  -->
-        </div>
     </div>
     <!-- Service End -->
     
