--- a/grace/templates/grace/sermon.html
+++ b/grace/templates/grace/sermon.html
@@ -3,13 +3,13 @@
 {% load static %}
     <!-- Carousel Start -->
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header3 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center">
             <h1 class="display-4 text-white animated slideInDown mb-4">Sermons</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">church</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Sermons</li>
                 </ol>
             </nav>
@@ -21,88 +21,33 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">What We Do</div>
-                <h1 class="display-6 mb-5">Learn More What We Do And Get Involved</h1>
+                <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">Sermons</div>
+                <h1 class="display-6 mb-5">Learn More About Jesus and Grow Your Spiritual Life</h1>
             </div>
             <div class="youtube_video_area">
                 <div class="container-fluid p-0">
                     <div class="row no-gutters">
+                        {% for sermon in sermon_list %}
                         <div class="col-xl-3 col-lg-3 col-md-6">
                             <div class="single_video">
                                 <div class="thumb">
-                                    <img src="{% static 'assets/img/video/1.png' %}" alt="">
+                                    <img src="{{ sermon.image.url }}" alt="">
                                 </div>
                                 <div class="hover_elements">
                                     <div class="video">
-                                            <a class="popup-video" href="https://www.youtube.com/watch?v=Hzmp3z6deF8"> 
+                                            <a class="popup-video" href="{{ sermon.video_link }}"> 
                                                     <i class="fa fa-play"></i>
                                                 </a>
                                     </div>
         
                                     <div class="hover_inner">
-                                        <span>New York Show-2018</span>
-                                        <h3><a href="#">Shadows of My Dream</a></h3>
+                                        <span>{{ sermon.date }}</span>
+                                        <h3><a href="#">{{ sermon.title }}</a></h3>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="single_video">
-                                <div class="thumb">
-                                    <img src="{% static 'assets/img/video/2.png' %}" alt="">
-                                </div>
-                                <div class="hover_elements">
-                                    <div class="video">
-                                            <a class="popup-video" href="https://www.youtube.com/watch?v=Hzmp3z6deF8"> 
-                                                    <i class="fa fa-play"></i>
-                                                </a>
-                                    </div>
-        
-                                    <div class="hover_inner">
-                                        <span>New York Show-2018</span>
-                                        <h3><a href="#">Shadows of My Dream</a></h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="single_video">
-                                <div class="thumb">
-                                    <img src="{% static 'assets/img/video/3.png' %}" alt="">
-                                </div>
-                                <div class="hover_elements">
-                                    <div class="video">
-                                            <a class="popup-video" href="https://www.youtube.com/watch?v=Hzmp3z6deF8"> 
-                                                    <i class="fa fa-play"></i>
-                                                </a>
-                                    </div>
-        
-                                    <div class="hover_inner">
-                                        <span>New York Show-2018</span>
-                                        <h3><a href="#">Shadows of My Dream</a></h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="single_video">
-                                <div class="thumb">
-                                    <img src="{% static 'assets/img/video/4.png' %}" alt="">
-                                </div>
-                                <div class="hover_elements">
-                                    <div class="video">
-                                            <a class="popup-video" href="https://www.youtube.com/watch?v=Hzmp3z6deF8"> 
-                                                    <i class="fa fa-play"></i>
-                                                </a>
-                                    </div>
-        
-                                    <div class="hover_inner">
-                                        <span>New York Show-2018</span>
-                                        <h3><a href="#">Shadows of My Dream</a></h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -110,123 +55,6 @@
         </div>
     </div>
     
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-white py-1 px-3 mb-3">Sermons</div>
-                <h1 class="display-6 mb-5">Listen to our message</h1>
-            </div>
-            <!-- music_area  -->
-            <div class="music_area music_gallery fadeInUp" data-wow-delay="0.1s">
-                <div class="container">
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/1.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/2.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                                
-                        </div>
-
-                    </div>
-                    <div class="row align-items-center justify-content-center mb-20">
-                        <div class="col-xl-10">
-                            <div class="row align-items-center">
-                                        <div class="col-xl-9 col-md-9">
-                                            <div class="music_field">
-                                                    <div class="thumb rounded">
-                                                            <img src="{% static 'assets/img/music_man/3.png' %}" alt="">
-                                                        </div>
-                                                        <div class="audio_name">
-                                                            <div class="name">
-                                                                <h4>Frando Kally</h4>
-                                                                <p>10 November, 2019</p>
-                                                            </div>
-                                                                <audio preload="auto" controls>
-                                                                        <source src="https://www.w3schools.com/html/horse.mp3">
-                                                                    </audio>
-                                                        </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-3 col-md-3">
-                                            <div class="music_btn">
-                                                <a class="btn btn-outline-primary py-2 px-3" href="">
-                                                    <i class="fa fa-podcast"></i>  podcast
-                                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                                        <i class="fa fa-arrow-right"></i>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-    <!-- music_area end  -->
-        </div>
-    </div>
-    <!-- Service End -->
-    
-
     <!-- Testimonial End -->
     {% include 'grace/footer1.html' %}
     <!-- JS here -->
